# django-business

./: .gitignore  pyproject.toml
business/: settings.py  urls.py
business/blog/: admin.py  apps.py  models.py
business/blog/migrations/: 0001_initial.py
business/frontend/templates/business/: base.html
business/frontend/templates/business/storefront/about/: list.html
business/frontend/templates/business/storefront/blog/: list.html
business/frontend/templates/business/storefront/contact/: list.html
business/frontend/templates/business/storefront/core/: index.html
business/frontend/templates/business/storefront/services/: list.html
business/frontend/templates/business/storefront/store/: list.html
business/frontend/urls/: __init__.py  storefront.py
business/frontend/views/: about.py  blog.py  contact.py  core.py  service.py  store.py
business/service/: apps.py  models.py
business/service/migrations/: 0001_initial.py
