[tool.poetry]
name = "django-business"
version = "0.1.0"
description = ""
authors = ["Lardin Armas <andresarmas97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
