[tool.poetry]
name = "django-business"
version = "0.1.0"
description = "create briefcase"
authors = ["Lardin Armas <andresarmas97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
Pillow = "^8.2.0"
pylint = "^2.8.3"
pylint-django = "^2.4.4"
django-ckeditor = "^6.1.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
